# minimal-example-for-tiled-issue

./: Cargo.toml
assets/tiled/: BasicTileset.tsx  test-1-export.tmx
src/: main.rs  tiled_fix.rs
